# LiarGame

LiarGameClient/: CMakeLists.txt  CMakeLists.txt.user.2af5091  CMakeLists.txt.user.54a9de7  client_mainwindow.cpp  client_mainwindow.h  client_mainwindow.ui  images.qrc  main.cpp  selectCategoryDialog.cpp  selectCategoryDialog.h
LiarGameClient/images/: Roombackground
LiarGameServer/: CMakeLists.txt  CMakeLists.txt.user.2af5091  CMakeLists.txt.user.54a9de7  db_information.h  game_data.h  main.cpp  server_mainwindow.cpp  server_mainwindow.h  server_mainwindow.ui
